<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_menuu"
    android:orientation="vertical"
    android:gravity="bottom|center_horizontal"
    tools:context=".fragments.MenuFragment">


    <TextView
        android:id="@+id/btn_start"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:fontFamily="@font/jua_regular"
        android:textColor="#FECF59"
        android:background="@drawable/bg_start"
        android:gravity="center"
        android:layout_marginBottom="80dp"
        android:padding="16dp"
        android:textSize="44sp"/>

    <TextView
        android:id="@+id/btn_record"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:text="@string/record"
        android:fontFamily="@font/jua_regular"
        android:textColor="@color/grey"
        android:background="@drawable/bg_start"
        android:gravity="center"
        android:padding="16dp"
        android:layout_marginBottom="20dp"
        android:textSize="40sp"/>

    <TextView
        android:id="@+id/btn_setting"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:text="@string/setting"
        android:fontFamily="@font/jua_regular"
        android:textColor="@color/grey"
        android:background="@drawable/bg_start"
        android:gravity="center"
        android:padding="16dp"
        android:layout_marginBottom="60dp"
        android:textSize="40sp"/>


</LinearLayout>