<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@drawable/bg_simple"
    tools:context=".fragments.RecordFragment">


    <LinearLayout
        android:layout_marginHorizontal="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_record"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:gravity="center"
            android:textSize="36sp"
            android:layout_marginTop="16dp"
            android:textColor="@color/white"
            android:fontFamily="@font/jua_regular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sound"/>

        <ImageView
            android:id="@+id/btn_sound"
            android:layout_marginTop="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_closed"/>

        <TextView
            android:gravity="center"
            android:textSize="36sp"
            android:layout_marginTop="16dp"
            android:textColor="@color/white"
            android:fontFamily="@font/jua_regular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/vibration"/>

        <ImageView
            android:id="@+id/btn_vibration"
            android:layout_marginTop="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_closed"/>

        <TextView
            android:gravity="center"
            android:textSize="36sp"
            android:layout_marginTop="16dp"
            android:textColor="@color/white"
            android:fontFamily="@font/jua_regular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/language"/>

        <LinearLayout
            android:layout_marginTop="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/btn_en"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/en_selected"
                android:layout_marginHorizontal="10dp"/>

            <ImageView
                android:id="@+id/btn_ru"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ru_non_selected"
                android:layout_marginHorizontal="10dp"/>

        </LinearLayout>



        <TextView
            android:id="@+id/btn_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu"
            android:layout_marginVertical="24sp"
            android:background="@drawable/bg_menu_btn"
            android:paddingHorizontal="20dp"
            android:paddingVertical="5dp"
            android:textColor="@color/black"
            android:fontFamily="@font/jua_regular"
            android:textSize="28sp"/>

    </LinearLayout>

</LinearLayout>